--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Regex Site</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -19,19 +19,17 @@
             <button class="buttons">Consoantes Repetidas</button>
         </div>
         <div class="output" id="output" contenteditable="true" spellcheck="true" placeholder="Seu texto será copiado aqui." oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></div>
-    </div>
 
 
 
 
 
-
-    <script src="https://code.jquery.com/jquery-3.5.0.slim.min.js" integrity="sha256-MlusDLJIP1GRgLrOflUQtshyP0TwT/RHXsI1wWGnQhs=" crossorigin="anonymous"></script>
-    <script>
-        window.jQuery || document.write(`<script src = "js\\jquery-3.5.0.slim.min.js">
+        <script src="https://code.jquery.com/jquery-3.5.0.slim.min.js" integrity="sha256-MlusDLJIP1GRgLrOflUQtshyP0TwT/RHXsI1wWGnQhs=" crossorigin="anonymous"></script>
+        <script>
+            window.jQuery || document.write(`<script src = "js\\jquery-3.5.0.slim.min.js">
     <\/script>`)
-    </script>
-    <script src="js\script.js"></script>
+        </script>
+        <script src="js\script.js"></script>
 
 </body>
 
