--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             window.jQuery || document.write(`<script src = "js\\jquery-3.5.0.slim.min.js">
     <\/script>`)
         </script>
+        <script type="module" src="js\script.js"></script>
         <script src="js\script.js"></script>
-
 </body>
 
 </html>
