email button entered

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="app-box">
         <div class="top-buttons">
             <button class="buttons" onclick="findOnText(regex.duplicatedWords)">Palavras Duplicadas</button>
+            <button class="buttons" onclick="findOnText(regex.email)">E-mails</button>
         </div>
         <div class="editor" id="editor" contenteditable="true" placeholder="Insira seu texto aqui." oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></div>
         <div class="bottom-buttons">
