result div removed: output. CEP button added

--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
 <body>
     <div class="app-box">
         <div class="top-buttons">
-            <button class="buttons" onclick="findOnText(regex.duplicatedWords)">Palavras Duplicadas</button>
-            <button class="buttons" onclick="findOnText(regex.email)">E-mails</button>
+            <button class="buttons" onclick="findOnText(regex.duplicatedWords)">Palavra Duplicada</button>
+            <button class="buttons" onclick="findOnText(regex.email)">E-mail</button>
+            <button class="buttons" onclick="findOnText(regex.brazilianZipCode)">CEP</button>
         </div>
         <div class="editor" id="editor" contenteditable="true" placeholder="Insira seu texto aqui." oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></div>
         <div class="bottom-buttons">
             <button class="buttons">Consoantes Repetidas</button>
         </div>
-        <div class="output" id="output" contenteditable="true" spellcheck="true" placeholder="Seu texto será copiado aqui." oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></div>
-
 
 
 
