--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ache no Texto</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Oswald:wght@700&display=swap" rel="stylesheet">
 </head>
 
@@ -74,7 +74,7 @@
             window.jQuery || document.write(`<script src = "js\\jquery-3.5.0.slim.min.js">
     <\/script>`)
         </script>
-        <script type="module" src="js\script.js"></script>
+        <script type="module" src="./js/script.js"></script>
 </body>
 
 </html>
