changed header styles and index.html file

--- a/index.html
+++ b/index.html
@@ -6,14 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ache no Texto</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Oswald:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <h1 class="title"><span>ACHE</span> NO TEXTO</h1>
+    <header class="header">
+        <div class="header-logo">
+            <h1 class="title"><span>ACHE</span> NO TEXTO</h1>
+        </div>
+        <div class="header-description">
+            <p>Ferramenta gratuita de busca de informações em texto.</p>
+        </div>
     </header>
+    <div class="menu-line"></div>
+    <div class="tool-bar"></div>
     <div class="app-box">
+        <div class="tool-description">
+            <h2>Clique no botões correspondentes ao tipo de informações que deseja encontrar no texto.</h2>
+        </div>
         <div class="resultBox">
             <span class="numberOfMatches" id="numberOfMatches"></span>
         </div>
